--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
 version: '3.8'
 
 services:
-  api-gateway:
-    build:
-      context: ./api-gateway
-    ports:
-      - "5000:5000" # API Gateway exposed on port 3000
-    volumes:
-      - ./api-gateway:/app # Map current directory to /app in the container
-      - /app/node_modules # Prevent overwriting node_modules
-    depends_on:
-      - auth
-      - product
-    environment:
-      SERVICE_AUTH_URL: http://auth:3001
-      SERVICE_PRODUCT_URL: http://product:3003
-    command: npm run dev # Start the Next.js dev server
+  # api-gateway:
+  #   build:
+  #     context: ./api-gateway
+  #   ports:
+  #     - "5000:5000" # API Gateway exposed on port 3000
+  #   volumes:
+  #     - ./api-gateway:/app # Map current directory to /app in the container
+  #     - /app/node_modules # Prevent overwriting node_modules
+  #   depends_on:
+  #     - auth
+  #     - product
+  #   environment:
+  #     SERVICE_AUTH_URL: http://auth:3001  
+  #     SERVICE_PRODUCT_URL: http://product:3003
+  #   command: npm run dev # Start the Next.js dev server
 
   # frontend: 
   #   build:
@@ -64,6 +64,31 @@ services:
       - "27017:27017"
     volumes:
       - mongo-data:/data/db
+
+  kong:
+    image: kong/kong-gateway:3.8.0.0
+    container_name: kong
+    restart: unless-stopped
+    depends_on:
+      - mongodb
+    ports:
+      - "7000:8000"    # Proxy
+      - "7443:8443"    # Proxy (SSL)
+      - "8001:8001"    # Admin
+      - "7002:8002"    # GUI
+      - "7444:8444"    # Admin (SSL)
+    environment:
+      - KONG_DATABASE=off       # Disable database mode
+      - KONG_DECLARATIVE_CONFIG=/etc/kong/kong.yml # Use kong.yml for configuration
+      - KONG_ADMIN_LISTEN=0.0.0.0:8001
+      - KONG_ADMIN_GUI_URL=http://localhost:7002
+    volumes:
+      - ./kong/kong.yml:/etc/kong/kong.yml:ro
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:7001/" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 volumes:
   mongo-data:
